--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                     <p>contact<br>contact@lingo-land.net</p>
                 </div>
                 <div class="class-info hide-on-tablet-phone">
-                    <img src="assets/img/teacher.png" alt="Teacher Image">
+                    <img src="assets/img/group-181.png" alt="Teacher Image">
                     <p>Check Our Products<br>Buy online</p>
                     <a href="our_ressources.html"><button class="join-now-btn">Our Collection</button></a>
                 </div>
