"Updated HTML and CSS files: changed stylesheet links, font families, and added product card styling"

--- a/our_ressources.html
+++ b/our_ressources.html
@@ -23,7 +23,7 @@
     <meta property="twitter:image" content="assets/img/logo.png" />
 
     <title>Our Resources</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="assets/css/styles.css">
 </head>
 <body>
           <header class="header">
