--- a/aboout-us.html
+++ b/aboout-us.html
@@ -26,7 +26,7 @@
 
     <title>About Us - LingoLand</title>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="assets/css/styles.css">
 </head>
 <body>    <header class="header">
         <div class="container">
