--- a/store.html
+++ b/store.html
@@ -24,7 +24,7 @@
     <meta property="twitter:description" content="LingoLand offers top-quality English teaching materials designed to enhance learning experiences." />
     <meta property="twitter:image" content="assets/img/logo.png" />
 
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="assets/css/styles.css">
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <style>
         /* Add any additional styles here */
@@ -83,9 +83,7 @@
     
     <main class="main-content">
         <section class="store-section">
-            <center><h1>Our Store</h1></center>
-            <div class="products-container">
-                <!-- Product Card 1 -->
+            <center><h1 style="font-family: 'Anton', sans-serif;">Our Store</h1></center>
                 <div class="products-container">
                     <!-- Product Card 1 -->
                     <div class="product-card" data-product-id="1">
@@ -123,7 +121,6 @@
                         <button class="btn add-to-cart">Add to Cart</button>
                     </div>
                 </div>
-            </div>
         </section>
     </main>
     
