--- a/aboout-us.html
+++ b/aboout-us.html
@@ -58,7 +58,7 @@
     <section class="our-story">
         <div class="container">
             <div class="story-header">
-                <h2>Our Story</h2>
+                <h2 style="font-family: 'Anton', sans-serif;">Our Story</h2>
             </div>
             <div class="story-content">
                 <div class="story-text">
@@ -79,27 +79,27 @@
     <section class="about-lingoland">
         <div class="container">
             <div class="about-lingoland-header">
-                <h2>About LingoLand</h2>
+                <h2 style="font-family: 'Anton', sans-serif;">About LingoLand</h2>
                 <p class="subheading">Innovating English Education in Tunisia</p>
             </div>
             <div class="lingoland-content">
                 <div class="content-item">
                     <div class="icon">📚</div>
-                    <h3>Comprehensive Resources</h3>
+                    <h3 style="font-family: 'Anton', sans-serif;">Comprehensive Resources</h3>
                     <p>
                         LingoLand specializes in designing English language textbooks and resources tailored to align with the official Tunisian program. Our commitment is to provide top-quality English teaching materials that incorporate the latest pedagogical approaches and advanced AI tools to enhance your learning experience.
                     </p>
                 </div>
                 <div class="content-item">
                     <div class="icon">💡</div>
-                    <h3>Innovative Approach</h3>
+                    <h3 style="font-family: 'Anton', sans-serif;">Innovative Approach</h3>
                     <p>
                         Our innovative approach combines engaging multimedia content, interactive lessons, and cutting-edge AI technology to create a comprehensive learning environment. Whether you are a teacher looking for resources to support your classroom instruction or a student striving to improve your English skills, LingoLand has the tools you need to succeed.
                     </p>
                 </div>
                 <div class="content-item">
                     <div class="icon">🌍</div>
-                    <h3>Global Mission</h3>
+                    <h3 style="font-family: 'Anton', sans-serif;">Global Mission</h3>
                     <p>
                         Join us on our mission to transform English language education in Tunisia and beyond. Explore our resources, connect with our community, and discover the LingoLand difference today.
                     </p>
