--- a/store.html
+++ b/store.html
@@ -157,6 +157,6 @@
     </footer>
 
     <script src="scripts.js"></script>
-    <script src="cart.js"></script>
+    <script src="assets/js/cart.js"></script>
 </body>
 </html>
