"Updated og:url and twitter:url meta tags to remove 'www' from domain name in about-us.html, contact.html, and index.html files."

--- a/contact.html
+++ b/contact.html
@@ -14,10 +14,10 @@
     <meta property="og:title" content="LingoLand" />
     <meta property="og:description" content="LingoLand offers top-quality English teaching materials designed to enhance learning experiences." />
     <meta property="og:image" content="assets/img/logo.png" />
-    <meta property="og:url" content="https://www.lingo-land.net" />
+    <meta property="og:url" content="https://lingo-land.net" />
 
     <meta property="twitter:card" content="summary_large_image" />
-    <meta property="twitter:url" content="https://www.lingo-land.net" />
+    <meta property="twitter:url" content="https://lingo-land.net" />
     <meta property="twitter:title" content="LingoLand" />
     <meta property="twitter:description" content="LingoLand offers top-quality English teaching materials designed to enhance learning experiences." />
     <meta property="twitter:image" content="assets/img/logo.png" />
