"Updated VSCode settings and modified HTML files (contact.html and index.html) with added script tags, form ID, and favicon."

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <meta name="theme-color" content="#f4440f" />
 
     <title>LingoLand</title>
-
+    <link rel="shortcut icon" href="assets/img/logo.png" type="image/x-icon">
     <meta property="og:type" content="website" />
     <meta property="og:title" content="LingoLand" />
     <meta property="og:description" content="LingoLand offers top-quality English teaching materials designed to enhance learning experiences." />
