--- a/contact.html
+++ b/contact.html
@@ -24,6 +24,9 @@
 
     <title>Our Resources</title>
     <link rel="stylesheet" href="assets/css/styles.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+
 </head>
 <body>
       <header class="header">
@@ -59,7 +62,7 @@
             <h1>Our Contact</h1>
             <div class="contact-container">
                 <div class="form-container">
-                    <form action="submit-form.php" method="post">
+                    <form id="contact-form">
                         <div class="form-group">
                             <label for="name">Name:</label>
                             <input type="text" id="name" name="name" required>
@@ -113,6 +116,7 @@
             <p>&copy; 2024 LingoLand. All rights reserved.</p>
         </div>
     </footer>
+    <script src="assets/js/contact.js"></script>
     <script src="scripts.js"></script>
 </body>
 </html>
