meta pictures change

--- a/index.html
+++ b/index.html
@@ -11,18 +11,18 @@
     <meta name="theme-color" content="#f4440f" />
 
     <title>LingoLand</title>
-    <link rel="shortcut icon" href="assets/img/logo.png" type="image/x-icon">
+    <link rel="shortcut icon" href="assets/img/Namelogo.png" type="image/x-icon">
     <meta property="og:type" content="website" />
     <meta property="og:title" content="LingoLand" />
     <meta property="og:description" content="LingoLand offers top-quality English teaching materials designed to enhance learning experiences." />
-    <meta property="og:image" content="assets/img/logo.png" />
+    <meta property="og:image" content="assets/img/Namelogo.png" />
     <meta property="og:url" content="https://lingo-land.net" />
 
     <meta property="twitter:card" content="summary_large_image" />
     <meta property="twitter:url" content="https://lingo-land.net" />
     <meta property="twitter:title" content="LingoLand" />
     <meta property="twitter:description" content="LingoLand offers top-quality English teaching materials designed to enhance learning experiences." />
-    <meta property="twitter:image" content="assets/img/logo.png" />
+    <meta property="twitter:image" content="assets/img/Namelogo.png" />
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
 
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
