"Updated margin-top in hero-content CSS class and modified store.html header element"

--- a/store.html
+++ b/store.html
@@ -83,7 +83,9 @@
     
     <main class="main-content">
         <section class="store-section">
-            <center><h1 style="font-family: 'Anton', sans-serif;">Our Store</h1></center>
+            <h2 class="approach-title" style="font-family: 'Anton', sans-serif;">
+                <span>Our</span> <span>Approach</span>
+            </h2>
                 <div class="products-container">
                     <!-- Product Card 1 -->
                     <div class="product-card" data-product-id="1">
