--- a/index.html
+++ b/index.html
@@ -46,33 +46,32 @@
     </style>
 </head>
 <body>
-    <header class="header">
-        <div class="container">
-            <a href="#" class="logo" id="logo">
-                <img src="assets/img/logo.png" alt="LingoLand Logo">
-            </a>
-            <div class="nav-container">
-                <button class="menu-toggle" aria-label="Toggle navigation">
-                    <span class="menu-icon">
-                        <span class="menu-icon-line"></span>
-                        <span class="menu-icon-line"></span>
-                        <span class="menu-icon-line"></span>
-                    </span>
-                </button>
-                    <nav class="nav">
-                    <ul class="nav-list">
-                        <li><a href="index.html">Home</a></li>
-                        <li><a href="store.html">Store</a></li>
-                        <li><a href="aboout-us.html">About Us</a></li>
-                        <li><a href="our_ressources.html">Resources</a></li>
-                        <li><a href="contact.html">Contact</a></li>
-                    </ul>
-                </nav>
+  <header class="header">
+    <div class="container">
+        <a href="#" class="logo" id="logo">
+            <img src="assets/img/Logo.png" alt="LingoLand Logo">
+        </a>
+        <div class="nav-container">
+            <button class="menu-toggle" aria-label="Toggle navigation">
+                <span class="menu-icon">
+                    <span class="menu-icon-line"></span>
+                    <span class="menu-icon-line"></span>
+                    <span class="menu-icon-line"></span>
+                </span>
+            </button>
+                <nav class="nav">
+                <ul class="nav-list">
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="store.html">Store</a></li>
+                    <li><a href="aboout-us.html">About Us</a></li>
+                    <li><a href="our_ressources.html">Resources</a></li>
+                    <li><a href="contact.html">Contact</a></li>
+                </ul>
+            </nav>
 
-            </div>
         </div>
-    </header>
-
+    </div>
+  </header>
     
     <section class="hero">
         <div class="hero-content">
