header changing to match index

--- a/aboout-us.html
+++ b/aboout-us.html
@@ -28,33 +28,34 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="assets/css/styles.css">
 </head>
-<body>    <header class="header">
-        <div class="container">
-            <a href="#" class="logo" id="logo">
-                <img src="assets/img/logo.png" alt="LingoLand Logo">
-            </a>
-            <div class="nav-container">
-                <button class="menu-toggle" aria-label="Toggle navigation">
-                    <span class="menu-icon">
-                        <span class="menu-icon-line"></span>
-                        <span class="menu-icon-line"></span>
-                        <span class="menu-icon-line"></span>
-                    </span>
-                </button>
-                <nav class="nav">
-                    <ul class="nav-list">
-                        <li><a href="index.html">Home</a></li>
-                        <li><a href="store.html">Store</a></li>
-                        <li><a href="aboout-us.html">About Us</a></li>
-                        <li><a href="our_ressources.html">Resources</a></li>
-                        <li><a href="contact.html">Contact</a></li>
-                    </ul>
-                </nav>
-            </div>
-        </div>
+<body>
+    <header class="header">
+      <div class="container">
+          <a href="#" class="logo" id="logo">
+              <img src="assets/img/Logo.png" alt="LingoLand Logo">
+          </a>
+          <div class="nav-container">
+              <button class="menu-toggle" aria-label="Toggle navigation">
+                  <span class="menu-icon">
+                      <span class="menu-icon-line"></span>
+                      <span class="menu-icon-line"></span>
+                      <span class="menu-icon-line"></span>
+                  </span>
+              </button>
+                  <nav class="nav">
+                  <ul class="nav-list">
+                      <li><a href="index.html">Home</a></li>
+                      <li><a href="store.html">Store</a></li>
+                      <li><a href="aboout-us.html">About Us</a></li>
+                      <li><a href="our_ressources.html">Resources</a></li>
+                      <li><a href="contact.html">Contact</a></li>
+                  </ul>
+              </nav>
+  
+          </div>
+      </div>
     </header>
-
-
+      
     <section class="our-story">
         <div class="container">
             <div class="story-header">
