--- a/contact.html
+++ b/contact.html
@@ -29,10 +29,11 @@
 
 </head>
 <body>
-      <header class="header">
+
+    <header class="header">
         <div class="container">
             <a href="#" class="logo" id="logo">
-                <img src="assets/img/logo.png" alt="LingoLand Logo">
+                <img src="assets/img/Logo.png" alt="LingoLand Logo">
             </a>
             <div class="nav-container">
                 <button class="menu-toggle" aria-label="Toggle navigation">
@@ -42,7 +43,7 @@
                         <span class="menu-icon-line"></span>
                     </span>
                 </button>
-                <nav class="nav">
+                    <nav class="nav">
                     <ul class="nav-list">
                         <li><a href="index.html">Home</a></li>
                         <li><a href="store.html">Store</a></li>
@@ -51,10 +52,11 @@
                         <li><a href="contact.html">Contact</a></li>
                     </ul>
                 </nav>
-
+    
             </div>
         </div>
-    </header>
+      </header>
+        
 
 
     <main class="main-content">
