--- a/our_ressources.html
+++ b/our_ressources.html
@@ -26,10 +26,11 @@
     <link rel="stylesheet" href="assets/css/styles.css">
 </head>
 <body>
-          <header class="header">
+ 
+    <header class="header">
         <div class="container">
             <a href="#" class="logo" id="logo">
-                <img src="assets/img/logo.png" alt="LingoLand Logo">
+                <img src="assets/img/Logo.png" alt="LingoLand Logo">
             </a>
             <div class="nav-container">
                 <button class="menu-toggle" aria-label="Toggle navigation">
@@ -48,11 +49,11 @@
                         <li><a href="contact.html">Contact</a></li>
                     </ul>
                 </nav>
-
+    
             </div>
         </div>
-    </header>
-
+      </header>
+        
     <section class="education-videos">
         <div class="hero-banner">
             <h1>Explore Educational Videos</h1>
