--- a/contact.html
+++ b/contact.html
@@ -28,7 +28,7 @@
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 
 </head>
-<body>
+<body style="max-width: 100%;overflow: hidden;">
       <header class="header">
         <div class="container">
             <a href="#" class="logo" id="logo">
