--- a/contact.html
+++ b/contact.html
@@ -28,7 +28,7 @@
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 
 </head>
-<body style="max-width: 100%;overflow: hidden;">
+<body>
       <header class="header">
         <div class="container">
             <a href="#" class="logo" id="logo">
@@ -76,12 +76,13 @@
                         </div>
                         <button type="submit">Submit</button>
                     </form>
+                </div>
+
+        </section><br>
                 <div class="coming-soon">
                     <h2>Coming Soon</h2>
                     <p>We are working on exciting new resources. Stay tuned!</p>
                 </div>
-            </div>
-        </section>
     </main>
     <footer class="footer">
         <div class="footer-content">
