--- a/contact.html
+++ b/contact.html
@@ -23,11 +23,13 @@
     <meta property="twitter:image" content="assets/img/logo.png" />
 
     <title>Our Resources</title>
-    <link rel="stylesheet" href="assets/css/styles.css">
+    <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
+
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="assets/css/styles.css">
     <style>
-    /* Add your custom styles here */
+        /* Add your custom styles here */
         .menu-toggle {
             display: none; /* Initially hide the menu toggle */
         }
@@ -71,6 +73,7 @@
             </div>
         </div>
     </header>
+
 
     <main class="main-content">
         <section class="resources-section">
