"Updated contact.html: added new h1 element, changed existing h1 text from 'Our Contact' to 'Your Contact'"

--- a/contact.html
+++ b/contact.html
@@ -76,8 +76,11 @@
 
 
     <main class="main-content">
+        <h1 class="what-is-lingo-land fade-in-up" style="font-family: 'Anton', sans-serif;font-size: xx-large;">
+            <span>Contact</span> <span>Us!</span>
+        </h1>
         <section class="resources-section">
-            <h1>Our Contact</h1>
+            <h1>Your Contact</h1>
             <div class="contact-container">
                     <form id="contact-form">
                         <div class="form-group">
